Some fixes and making a auto-merge (not manual development)